 _____________________________________________________________________________
/                                                                             \
| Chirpy! v0.3                                                     YYYY.MM.DD |
\_____________________________________________________________________________/

* Template parameters are now global, which means you can include parameters
  from outside a loop
* Optimized template parsing a little

 _____________________________________________________________________________
/                                                                             \
| Chirpy! v0.2                                                     2006.05.02 |
\_____________________________________________________________________________/

* Fixed SQL injection vulnerabilities
* Fixed logging of author when editing or removing news items (#1289047)
* Added on-the-fly gzip compression to Chirpy::UI::WebApp--webapp.enable_gzip=1
  in your configuration file enables it
* Added optional captcha image to Chirpy::UI::WebApp's quote submission page
* Added quote tagging
* Made search query Google-style and added tag: prefix for searching for quotes
  with a certain tag
* Made top and bottom quotes browsable
* Added periodic update check (site owners only)
* Made ui.quotes_per_page apply to random, top and bottom quotes instead of
  individual setting per page type
* Added webapp.quotes_per_feed to set maximum number of quotes in feeds
  individually
* Made Atom 1.0 feed valid by adding feed ID and webmaster name. Webmaster name
  must be configured as webapp.webmaster_name
* Added quote_count method to Chirpy::DataManager and APPROVED_QUOTE_COUNT,
  UNAPPROVED_QUOTE_COUNT, and TOTAL_QUOTE_COUNT to templates
* Added mass quote approval and unflagging to Chirpy::UI::WebApp's
  administration section
* Changed Chirpy::DataManager's API so add_* methods set IDs
* Added option to automatically turn URLs and e-mail addresses in quotes into