@@ -3,6 +3,7 @@
 | Chirpy! v0.3                                                     YYYY.MM.DD |
 \_____________________________________________________________________________/
 
+* Made tag cloud ignore unapproved quotes
 * Template parameters are now global, which means you can include parameters
   from outside a loop
 * Optimized template parsing a little
